.provarCaches/00D6C0000000xA6UAI/objects/scss__Root_Post_Generation_Log_Detail__c.object
<CustomObject>
    <fields>
        <fullName>scss__AsyncApexJob_Id__c</fullName>
        <label>AsyncApexJob Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scss__Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>scss__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scss__Error_Detail__c</fullName>
        <label>Error Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>scss__Execution_Level__c</fullName>
        <label>Execution Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scss__Progress_Status__c</fullName>
        <label>Progress Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Batch In process</fullName>
                </value>
                <value>
                    <fullName>BatchCompleted</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>scss__Root_Post_Generation_Log__c</fullName>
        <label>Root Post Generation Log</label>
        <referenceTo>scss__Root_Post_Generation_Log__c</referenceTo>
        <relationshipLabel>Root Post Generation Logs</relationshipLabel>
        <relationshipName>LogApexJobsDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Root Post Generation Log Detail</label>
    <nameField>
        <label>Root Post Log Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Root Post Generation Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>